acm/np-mgmt-cluster-azure/namespaces/argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo
  namespace: argo
  annotations:
    configsync.gke.io/cluster-name-selector: np-mgmt-cluster-azure
spec:
  ingressClassName: nginx
  rules:
  - host: argo.coldbrewlabs.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: argo-argo-workflows-server
            port:
              number: 2746
